Fixed header spacing for responsive

--- a/css/header.css
+++ b/css/header.css
@@ -64,7 +64,7 @@
     color: #fff;
     text-shadow: 2px 3px 4px #000000;
     margin-top: 10px;
-    letter-spacing: 7px;
+    letter-spacing: 2px;
   }
 
   .Menu {
@@ -96,7 +96,7 @@
     color: #fff;
     text-shadow: 2px 3px 4px #000000;
     margin-top: 20px;
-    letter-spacing: 7px;
+    letter-spacing: 2px;
   }
 
   .Menu {
